test/should_fail/badstack.qdbp
foo: {self!.}
stack: {
  Data[#Empty{}]
  Push[that|
    curr_data: self Data.
    { self
      Data[#NonEmpty {
        Val[that]
        Next[curr_data]
      }]
    }
  ]
  Peek[
    self Data.
      Empty?[foo!.]
      NonEmpty?[data| data Val.].
  ]
}

stack Push 3. Push 2. Peek. Foo.